--- a/app/assets/javascripts/selections/choose_profile.js.erb
+++ b/app/assets/javascripts/selections/choose_profile.js.erb
@@ -1,31 +1,25 @@
 function chooseProfile(){
-  $(document).on("click", "#color", function(){
-    // adjustProfile("color");
-    $("#profile").removeClass();
-    $("#profile").addClass("color");
-    $(".modal-background").hide();
-    $("#color-audio").trigger("play");
+  $(document).on("click", ".profile", changeProfile);
+  
+  function changeProfile(){
+    $("#profile").toggleClass("trace").toggleClass("color");
+    $(".profile.thumb").toggleClass("hidden");
 
-    $("#profile-holder").html("<img id='trace' class='profile-thumb' src='<%= asset_path('trace.png') %>'/>");
+    if( $(this).attr("id") === 'color' ){
+      chooseTraceProfile();
+    } else {
+      chooseColorProfile();
+    }
+  }
 
-    $(".switch-holder").hide();
-    $("#done-div").html("<div id='remove-image'>Done</div>");
-
+  function chooseTraceProfile(){
+   $("#color-audio").trigger("play");
     adjustImageOpacity(1);
-  })
+  }
 
-  $(document).on("click", "#trace", function(){
-    // adjustProfile("trace");
-    $("#profile").removeClass();
-    $("#profile").addClass("trace");
-    $(".modal-background").hide();
+  function chooseColorProfile(){
     $("#trace-audio").trigger("play");
-
-    $("#profile-holder").html("<img id='color' class='profile-thumb' src='<%= asset_path('color.png') %>'/>");
-
-    $("#remove-image").hide();
-    $("#switch-div").html("<div class='switch-holder'><div class='light-switch js-off'></div></div>");
-
     adjustImageOpacity(0.3);
-  })
+  }
 }
+
