--- a/app/assets/javascripts/setup/canvases.js.erb
+++ b/app/assets/javascripts/setup/canvases.js.erb
@@ -1,10 +1,20 @@
-function setCanvasContext(){
-  var drawingCanvas = document.getElementById("drawing-canvas");
-  drawingContext = drawingCanvas.getContext("2d");
-  
-  var midLayer = document.getElementById("mid-layer");
-  midLayerContext = midLayer.getContext("2d");
-  
-  var imageHolder = document.getElementById("image-holder");
-  imageHolderContext = imageHolder.getContext("2d");
+function setCanvases(){
+	var drawingCanvas = document.getElementById("drawing-canvas");
+	drawingContext = drawingCanvas.getContext("2d");
+	drawingContext.lineJoin = "round";
+	drawingContext.lineCap = "round";
+
+	undoArray = new Array(); // not sure how to make this a local variable... it also doesn't belong in this file
+
+	$("#js-undo").on("click", undo);
+	$("#js-redo").on("click", redo);
+	
+	var imageHolder = document.getElementById("image-holder");
+	imageHolderContext = imageHolder.getContext("2d");
+
+	var completedDrawing = document.getElementById("completed-drawing");
+	completedDrawingContext = completedDrawing.getContext("2d");
+
+	$("canvas").attr( "height", $("#canvas-section").height() );
+	$("canvas").attr( "width", $("#canvas-section").width() );
 }
