Added complete_drawing modal. Some refactor of existing modals.

--- a/app/views/drawings/modals/_about_modal.html.erb
+++ b/app/views/drawings/modals/_about_modal.html.erb
@@ -1,11 +1,27 @@
 <div class="modal-base" id="about-modal-base">
-  <div class="modal-main" id="about-modal-main">
-    <button id="close-modal">×</button>
+  <div class="modal-main">
+    <button class="close-modal">×</button>
 
-    <label class="modal-label"><h2>About</h2></label>
-    <h4 class="modal-text">iDraw allows you to draw your favorite cartoon character by tracing over it.
+    <table>
+    	<tr>
+    		<th class="modal-header">About</th>
+    	</tr>
 
-    It's super simple! After you choose your profile (coloring/tracing), choose a cartoon character from the list, and color away.
-    </h4>
+        <tbody class="modal-body">
+        	<tr>
+        		<td>
+                    Drawing your favorite cartoon character is so easy with iDraw!<br><br>
+            		
+            		After you choose your profile (coloring/tracing), choose a character from the list and color away!<br><br>
+                </td>
+        	</tr>
+
+            <tr>
+                <td class="github-note">
+                    This project is hosted on <a target="_blank" href="https://github.com/jmsardina/i-draw">GitHub</a>.  If you would like to contribute to it, feel free to create issues, leave comments, submit pull requests, etc.
+                </td>
+            </tr>
+        </tbody>
+    </table>
   </div>
 </div>
