--- a/app/views/drawings/modals/_search_modal.html.erb
+++ b/app/views/drawings/modals/_search_modal.html.erb
@@ -1,8 +1,15 @@
 <div class="modal-base" id="search-modal-base">
-  <div class="modal-main" id="search-modal-main">
-    <button id="close-modal">×</button>
+  <div class="modal-main">
+    <button class="close-modal">×</button>
 
-    <label class="modal-label"><h2>Choose Your Favorite!</h2></label>
-    <div id="results-div"></div>
+    <table>
+    	<tr>
+    		<th class="modal-header">Choose Your Favorite!</th>
+    	</tr>
+    	<tr class="modal-body">
+		    <td><div id="results-div"></div></td>
+    	</tr>
+    </table>
+    
   </div>
 </div>
