--- a/app/views/drawings/_profile_modal.html.erb
+++ b/app/views/drawings/_profile_modal.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-background">
+<div class="modal-base">
   <div class="modal-main" id="profile-modal">
     <div id="profile">
       <img id="color" class="example-profile" src="<%= asset_path('color.png') %>"/>
