Initial refactor of views.

--- a/app/views/drawings/workspace/_canvases.html.erb
+++ b/app/views/drawings/workspace/_canvases.html.erb
@@ -1,3 +1,4 @@
-<canvas id="drawing-canvas" height="500" width="900"></canvas>
-<canvas id="mid-layer" height="500" width="900"></canvas>
-<canvas id="image-holder" height="500" width="900"></canvas>
+<div id="canvases">
+	<canvas class="canvas" id="drawing-canvas"></canvas>
+	<canvas class="canvas" id="image-holder"></canvas>
+</div>
