--- a/app/views/drawings/workspace/_tray.html.erb
+++ b/app/views/drawings/workspace/_tray.html.erb
@@ -18,6 +18,6 @@
       <% end %>
     </div>
     
-    <div class="eraser"></div>
+    <%= image_tag( 'eraser', {class: 'eraser'} ) %>
   </div>
 </div>
