--- a/app/views/drawings/index.html.erb
+++ b/app/views/drawings/index.html.erb
@@ -1,39 +1,47 @@
-<div id="header-div">
+<div class="layout" id="header">
   <div class="left">
-    <div id="about">
-      <h2><a href="/">iDraw</a></h2>
-    </div>
+    <h2 id="about">iDraw</h2>
   </div>
-  <%= render 'search_form' %>
+
+  <div class="right">
+    <%= render 'search_form' %>
+  </div>
 </div>
 
 <table>
-  <tr>
-    <td>
-      <div id="workspace">
+    <th></th>
+    <th></th>
+    <th></th>
+    <th>Choose Your Favorite!</th>
+ 
+  <tbody id="page-body">
+    <tr>
+      <td id="tray-section">
         <%= render 'drawings/workspace/tray' %>
+      </td>
+      <td id="canvas-section">
         <%= render 'drawings/workspace/canvases' %>
-      </div>
-      <%#= render 'upload_form' %>
-    </td>
+      </td>
 
-    <td>
-      <%= render 'drawings/workspace/sidebar' %>
-    </td>
+      <td id="sidebar-section">
+        <%= render 'drawings/workspace/sidebar' %>
+      </td>
 
-    <td>
-      <%= render 'drawings/workspace/all_cartoons' %>
-    </td>
-  </tr>
+      <td id="cartoons-section">
+        <%= render 'drawings/workspace/all_cartoons' %>
+      </td>
+    </tr>
+  </tbody>
 </table>
 
 <%= render 'drawings/modals/search_modal' %>
-<%#= render 'drawings/modals/about_modal' %>
-<%#= render 'drawings/modals/profile_modal' %>
+<%= render 'drawings/modals/about_modal' %>
+<%= render 'drawings/modals/profile_modal' %>
+<%= render 'drawings/modals/complete_drawing' %>
 <%= render 'audio' %>
 
-<div id="footer">
+<div class="layout" id="footer">
   <div class="center">
-    Made with <3 by <a href="http://people.flatironschool.com/profiles/jennifer-sardina">Jennifer Sardina</a>
+    Made with <3 by <a target="_blank" href="https://www.linkedin.com/pub/jennifer-sardina/62/955/434">Jennifer Sardina</a>
   </div>
 </div>
