--- a/app/views/workspace/_sidebar.html.erb
+++ b/app/views/workspace/_sidebar.html.erb
@@ -8,10 +8,10 @@
 
 	<span id="toggle-cartoon"><%= render 'shared/light_switch' %></span>	
 
-	<div id="profile" class="trace"> 
+	<div id="profile"> 
 		<div id="profile-holder">
-			<img id='trace' class='profile thumb hidden' src='<%= asset_path('trace.png') %>'/>
-    		<img id='color' class='profile thumb' src='<%= asset_path('color.png') %>'/>
+			<img class='profile thumb trace-profile' src='<%= asset_path('trace.png') %>'/>
+    		<img class='profile thumb color-profile' src='<%= asset_path('color.png') %>'/>
 		</div>
 	</div>
 
