Created modal partials.

--- a/app/views/modals/_about_modal.html.erb
+++ b/app/views/modals/_about_modal.html.erb
@@ -1,11 +1,11 @@
 <div class="modal-base" id="about-modal-base">
-  <div class="modal-main">
+  <div class="modal-main" id="about-modal">
     <button class="close-modal">×</button>
 
     <table>
-    	<tr>
+    	<thead>
     		<th class="modal-header">About</th>
-    	</tr>
+    	</thead>
 
         <tbody class="modal-body">
         	<tr>
