--- a/app/views/modals/_search_modal.html.erb
+++ b/app/views/modals/_search_modal.html.erb
@@ -1,5 +1,5 @@
 <div class="modal-base" id="search-modal-base">
-  <div class="modal-main">
+  <div class="modal-main" id="search-modal">
     <button class="close-modal">×</button>
 
     <table>
