--- a/app/assets/stylesheets/tools.css.scss
+++ b/app/assets/stylesheets/tools.css.scss
@@ -2,9 +2,8 @@
     width: 10%;
 
   #tray {
-    border: 1px solid;
     display: inline-block;
-    height:500px;
+    height: 90%;
     padding: 0;
     min-width: 59px;
     z-index: 2;
@@ -16,6 +15,10 @@
       width: 45%;
       min-width: 26px;
       min-height: 42px;
+
+      &.in-use {
+        box-shadow: inset 0 0 0 3px #27496d;
+      }
     }
 
     .tip {
