--- a/app/assets/stylesheets/workspace.css.scss
+++ b/app/assets/stylesheets/workspace.css.scss
@@ -1,5 +1,28 @@
+.canvas {
+  border: 1px solid;
+  margin: auto;
+  position: absolute;
+
+  &#image-holder {
+    pointer-events: none;
+    z-index: 30;
+  }
+
+  &#drawing-canvas {
+    cursor: url(/assets/pencil.png), auto;
+    z-index: 20;
+    
+    &.erasing {
+      cursor: url(/assets/eraser.png), auto;
+    }
+  }
+}
+
 table {
   width: 100%;
+  /*height: 574px;*/
+  height: 90%;
+  margin-top: 20px;
 
   th {
     text-align: center;
@@ -9,32 +32,14 @@ table {
 
   #page-body {
     
-    #canvas-section {
+    .canvas-section {
       width: 60%;
       
       #canvases {
-        margin-top: -250px;      
+        margin-top: -280px;
+        @extend .canvas;
       }
-
-      .canvas {
-        border: 1px solid;
-        margin: auto;
-        position: absolute;
-
-        &#image-holder {
-          pointer-events: none;
-          z-index: 30;
-        }
-
-        &#drawing-canvas {
-          cursor: url(/assets/pencil.png), auto;
-          z-index: 20;
-          
-          &.erasing {
-            cursor: url(/assets/eraser.png), auto;
-          }
-        }
-      }
+      
     }
 
     #sidebar-section {
@@ -43,16 +48,12 @@ table {
       #side-bar {
         width: 100%;
         text-align: center;
-        margin-top: -220px;
+        margin-top: -180px;
 
         .version-control {
-        cursor: pointer;
-        height: auto;
-        width: 100%;
-
-          &#js-redo {
-            margin-bottom: 8px;
-          }  
+          cursor: pointer;
+          height: auto;
+          width: 100%;
         }
 
         #start-over {
@@ -61,10 +62,6 @@ table {
           color: red;
         } 
 
-        #new-cartoon {
-          margin-top: -100px;
-        }
-        
         #toggle-cartoon {
           .switch-holder {
             height: 25px;
