--- a/app/assets/javascripts/selections/choose_color.js.erb
+++ b/app/assets/javascripts/selections/choose_color.js.erb
@@ -1,4 +1,4 @@
-function chooseColor(){
+$(function chooseColor(){
     $("#html5colorpicker").on("change", fromColorPicker);
     fromButtons();
 
@@ -7,28 +7,26 @@ function chooseColor(){
         $("#<%= color %>").on("click", <%= color %>);
        
         function <%= color %>(){
-          var currentColorLetters = drawingContext.strokeStyle.split(
-            '');
+          var currentColorLetters = drawingContext.strokeStyle.split('');
           currentColorLetters.shift();
           var currentColorClass = "." + currentColorLetters.join("");
-          $(currentColorClass).attr("style", "background-color: colorName; border-radius:50%; height:50px; width:50px;".replace("colorName", $(currentColorClass).attr("id")
-            ));
-         
+          $(currentColorClass).removeClass("in-use");
+    
           drawingContext.globalCompositeOperation = "source-over";
           drawingContext.strokeStyle = "<%= color %>";
-          $(this).attr("style", "background-color:<%= color %>;border-radius:50%;height:50px;width:50px;box-shadow: inset 0 0 0 3px #27496d;");
+          $(this).addClass("in-use");
 
-          var newColorLetters = drawingContext.strokeStyle.split(
-            '');
+          var newColorLetters = drawingContext.strokeStyle.split('');
           newColorLetters.shift();
           var newColorClass = newColorLetters.join("");
+
           $(this).addClass(newColorClass);
         }
       <% end %>
     }
 
   function fromColorPicker(){
-    drawingContext.globalCompositeOperation = "source-over"
+    drawingContext.globalCompositeOperation = "source-over";
     drawingContext.strokeStyle = $(this).val();
   }
-} 
+});
