--- a/app/assets/javascripts/selections/choose_tip.js.erb
+++ b/app/assets/javascripts/selections/choose_tip.js.erb
@@ -1,16 +1,16 @@
-function chooseTip(){
-  <% Drawing::TIPS.each do |tip| %>
-    $("#<%= tip %>").on("click", chooseSize<%= tip %>);
+$(function chooseTip(){
+    <% Drawing::TIPS.each do |tip| %>
+        $("#<%= tip %>").on("click", chooseSize<%= tip %>);
 
-    function chooseSize<%= tip %>(){
-      var currentTipSize = drawingContext.lineWidth.toString();
-      var currentTipElement = document.getElementById(currentTipSize);
+        function chooseSize<%= tip %>(){
+            var currentTipSize = drawingContext.lineWidth.toString();
+            var currentTipElement = document.getElementById(currentTipSize);
 
-      $(currentTipElement).removeClass("in-use").addClass("not-in-use");
+            $(currentTipElement).removeClass("in-use").addClass("not-in-use");
 
-      drawingContext.lineWidth = <%= tip %>;
+            drawingContext.lineWidth = <%= tip %>;
 
-      $(this).removeClass("not-in-use").addClass("in-use");
-    }
-  <% end %>
-}
+            $(this).removeClass("not-in-use").addClass("in-use");
+        }
+    <% end %>
+});
